Additional comments on print_kthreads

--- a/kernel_linklist/Makefile
+++ b/kernel_linklist/Makefile
@@ -1,3 +1,8 @@
+# Author: Chase E Stewart
+#
+# Makefile to create the kernel_linklist module, named print_kthreads.ko
+# Note: after compilation completes, call sudo insmod print_kthreads.ko to add module
+
 obj-m += print_kthreads.o
 
 all:
