comment and clean up profiling

--- a/profiling/Makefile
+++ b/profiling/Makefile
@@ -6,19 +6,21 @@ CFLAGS= -g -std=c99 -Werror -Wall -pthread
 all: fork_vs_exec pthread_create kthread_create
 
 fork_vs_exec:
-	$(CC) $(CFLAGS) src/create_fork_exec.c $(LIBS) -o fork_exec 
+	$(CC) $(CFLAGS) src/profile_fork_exec.c $(LIBS) -o fork_exec 
+	@echo
 	@echo Built Fork_Exec
 
 pthread_create:
-	$(CC) $(CFLAGS) src/create_pthread.c $(LIBS) -o pthread_create 
+	$(CC) $(CFLAGS) src/profile_pthread.c $(LIBS) -o pthread_create 
+	@echo
 	@echo Built pThread_Create
 
 kthread_create:
-	$(CC) $(CFLAGS) src/create_kthread.c $(LIBS) -o kthread_create 
-	@echo Built kThread_Create
+	@echo
+	@echo For Kthread, use the Makefile in the kthread/ folder to create a kernel module
 
 .PHONY: clean
 
 clean:
-	@rm -vf fork_exec pthread_create kthread_create
+	@rm -vf fork_exec pthread_create 
 	@echo All functions removed!
